# SpaceBot

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
spacebot/: __main__.py  const.py  space.py
