[tool.poetry]
name = "spacebot"
version = "0.1.0"
description = "A discord bot that sends a wall of outspace emoji text to a discord channel."
authors = ["GrandMoff100 <nlarsen23.student@gmail.com>"]
license = "GPLv3-or-later"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
